start adding replying views

--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -26,6 +26,9 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ reply.author }} <br />
 	</p>
 	{% endfor %}
+	{% include reply.html %}
 	<hr>
 </p>
 {% endfor %}
+
+{% include "answer.html" %}
