change answer block inclusion

--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -41,6 +41,9 @@
 </p>
 {% endfor %}
 
-{% include "answer.html" %}</body>
+<h3> Answer this question </h3>
+
+{% include "answer.html" with type="new_answer" %}
+
 </body>
 </html>
