--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -36,7 +36,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ reply.author }} <br />
 	</p>
 	{% endfor %}
-	{% include "reply.html" %}
+	{% include "reply.html" with pk=answer.pk type="new_reply" %}
 	<hr>
 </p>
 {% endfor %}
