comment out the new question block

--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -9,6 +9,10 @@
 
 <body>
 
+{% comment %}
+	{% include "new_question.html" with type="new_question" %}
+{% endcomment %}
+
 <h2> {{ question.title }} </h2> 
 
 {{ question.author }} <br />
