increment view count when a question is viewed

--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -15,7 +15,7 @@
 
 {{ debug }}
 
-<h2> {{ question.title }} </h2> 
+<h2> {{ question.title }} - {{ question.viewCount }} </h2> 
 
 {{ question.author }} <br />
 {{ question.postDate }} <br />
