--- a/qanda/qanda_app/templates/answer.html
+++ b/qanda/qanda_app/templates/answer.html
@@ -1,12 +1,18 @@
 {% block answer %}
+
 <form method="post" action="{{ action_link }}">
-	{% csrf_token %}
+	{% csrf_token %}	
+	{{ answer_form.non_field_errors }}
 	<input type="hidden" name="pk" value="{{ pk }}">
 	<input type="hidden" name="type" value="{{ type }}">
-	<textarea type="textarea" name="answer_text" rows="10" cols="150" onFocus="clearAllText(this)">
-		Write your answer here...
-	</textarea>
-	<br />
-	<input type="submit" value="Submit">
+
+	<div class="answerTextWrapper">
+        {{ answer_form.text.errors }}
+        <label for="id_text">Answer:</label> <br />
+        {{ answer_form.text }}
+	</div>
+
+<input type="submit" value="Submit" />
 </form>
+
 {% endblock %}
