--- a/qanda/qanda_app/templates/new_question.html
+++ b/qanda/qanda_app/templates/new_question.html
@@ -1,17 +1,29 @@
 {% block new_question %}
+
 <form method="post" action="{{ action_link }}">
 	{% csrf_token %}
+	{{ question_form.non_field_errors }}
 	<input type="hidden" name="pk" value="{{ pk }}">
 	<input type="hidden" name="type" value="{{ type }}">
-	Title <br />
-	<input type="text" name="title"> <br />
-	Question Text <br />
-	<textarea type="textarea" name="question_text" rows="40" cols="150" onFocus="clearAllText(this)">
-		Write your question here...
-	</textarea> <br />
-	Tags <br />
-	<input type="text" name="tags"> <br />
-	<br />
-	<input type="submit" value="Submit">
+	<div class="questionTitleWrapper">
+        {{ question_form.title.errors }}
+        <label for="id_title">Title:</label>
+        {{ question_form.title }}
+	</div>
+
+	<div class="questionTextWrapper">
+        {{ question_form.text.errors }}
+        <label for="id_text">Question Text:</label> <br />
+        {{ question_form.text }}
+	</div>
+
+	<div class="questionTagsWrapper">
+        {{ question_form.tags.errors }}
+        <label for="id_tags">Tags:</label>
+        {{ question_form.tags }}
+	</div>
+
+<input type="submit" value="Submit" />
 </form>
+
 {% endblock %}
