--- a/qanda/qanda_app/templates/reply.html
+++ b/qanda/qanda_app/templates/reply.html
@@ -1,12 +1,17 @@
 {% block answer %}
+
 <form method="post" action="{{ action_link }}">
 	{% csrf_token %}
+	{{ reply_form.non_field_errors }}
+
 	<input type="hidden" name="pk" value="{{ pk }}">
-	<input type="hidden" name="type" value="{{ type }}">
-	<textarea type="textarea" name="reply_text" rows="2" cols="100" onFocus="clearAllText(this)">
-		Write your reply here...
-	</textarea>
-	<br />
+	<input type="hidden" name="type" value="{{ type }}">	
+	<div class="replyTextWrapper">
+        {{ reply_form.text.errors }}
+        <label for="id_text">Reply:</label> <br />
+        {{ reply_form.text }}
+	</div>	
 	<input type="submit" value="Submit">
 </form>
+
 {% endblock %}
