--- a/qanda/qanda_app/templates/new_question.html
+++ b/qanda/qanda_app/templates/new_question.html
@@ -9,6 +9,7 @@
 
 	{% block new_question %}
 
+<div class="span6">
 	<form method="post" action="{{ action_link }}">
 		{% csrf_token %}
 		{{ question_form.non_field_errors }}
@@ -34,7 +35,7 @@
 
 	<input type="submit" value="Submit" />
 	</form>
-
+</div>
 	{% endblock %}
 
 {% endblock %}
