--- a/qanda/qanda_app/templates/navbar.html
+++ b/qanda/qanda_app/templates/navbar.html
@@ -1,4 +1,5 @@
 {% block navbar %}
+
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
@@ -10,12 +11,18 @@
       <a class="brand" href="{% url qanda_app.views.index %}">Qanda</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"><a href="{% url qanda_app.views.index %}">Home</a></li>
-          <li><a href="{% url qanda_app.views.most_recent_question %}">Last Question</a></li>
-          <li><a href="{% url qanda_app.views.new_question_page %}">New Question</a></li>
+          <li {% if view == "question_list" %} class="active" {% endif %} ><a href="{% url qanda_app.views.index %}">Home</a></li>
+          <li {% if view == "last_question_page" %} class="active" {% endif %} ><a href="{% url qanda_app.views.most_recent_question %}">Last Question</a></li>
+          <li {% if view == "new_question_page" %} class="active" {% endif %} ><a href="{% url qanda_app.views.new_question_page %}">New Question</a></li>
         </ul>
+        <form class="navbar-search pull-right">
+          <input type="text" class="search-query" placeholder="Search">
+        </form>
       </div><!--/.nav-collapse -->
     </div>
   </div>
 </div>
+
+{{ request }}
+
 {% endblock %}
