add next and prev links to question page

--- a/qanda/qanda_app/templates/question_list.html
+++ b/qanda/qanda_app/templates/question_list.html
@@ -25,6 +25,15 @@
 		{% endfor %}
 	</div>
 
+	<div class="span6">
+		{% if prev %}
+		<a href="{% url qanda_app.views.question_list question_id=prev %}">Prev</a>
+		{% endif %}
+		{% if next %}
+		<a href="{% url qanda_app.views.question_list question_id=next %}">Next</a>
+		{% endif %}
+	</div>
+
 	{% endblock %}
 
 {% endblock %}
