--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -8,7 +8,6 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
 
 	{% comment %}
 		{% include "new_question.html" with type="new_question" %}
@@ -21,17 +20,22 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="span6">
+		<div class="span4">
 			by {{ question.author }} <br />
 			submitted {{ question.postDate }} <br />
-			<blockquote>
-			{{ question.text }}  
-			</blockquote>
+		</div>
+		<div class="span2">
+			{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" checked=question.subscribed %}
 		</div>
 	</div>
 	<div class="row">
 		<div class="span6">
-		{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" checked=question.subscribed %}
+			<blockquote>
+			{{ question.text }}  
+			</blockquote>
+		</div>
+		<div class="span2">
+			{% include "relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
 		</div>
 	</div>
 	<div class="row">
@@ -39,13 +43,9 @@
 			<ul>
 				Tags:
 				{% for tag in question.tags.all %}
-					<li> {{ tag.name }} </li>
+					<a href="{% url qanda_app.views.tag_page tag=tag.name page="0" %}">{{ tag.name }},</a>
 				{% endfor %}
 			</ul>	
-		</div>
-
-		<div class="span6">
-			{% include "relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
 		</div>
 	</div>
 
@@ -61,26 +61,43 @@
 		<div class="span6">
 		<p>
 			<div class="row">
+				<div class="span1">
+				</div>
 				<div class="span5">
 					<blockquote>
 						{{ answer.text }} 
 					</blockquote>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span1">
+				</div>
+				<div class="span3">
 					by {{ answer.author }}
+				</div>
+				<div class="span2">
+					{% include "subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" checked=answer.subscribed %}
 				</div>
 			</div>
 
 			<div class="row">
-				{% include "subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" checked=answer.subscribed %}
-			
-				{% include "relations.html" with relations=answer.relations pk=answer.pk type="answer" action_link="relate/" %} <br />
+				<div class="span1">
+				</div>
+				<div class="span2">
+					{% include "relations.html" with relations=answer.relations pk=answer.pk type="answer" action_link="relate/" %} <br />
+				</div>
 			</div>
 			
 			{% for reply in answer.replies.all %}
 			<p>
 				{% if not reply.deleted %}
 				<div class="row">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ reply.text }} <br />
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ reply.author }} <br />
+					<div class="span2">
+					</div>
+					<div class="span4">
+						{{ reply.text }} <br />
+						{{ reply.author }} <br />
+					</div>
 					{% endif %}
 				</div>
 			</p>
@@ -97,5 +114,5 @@
 
 		{% include "answer.html" with type="new_answer" action_link="relate/" %}
 	</div>
-</div>
+
 {% endblock %}
