--- a/qanda/qanda_app/templates/qanda_base.html
+++ b/qanda/qanda_app/templates/qanda_base.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-{% block head %}
-{% endblock %}
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% block head %}
+    {% endblock %}
+	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
     <style>
@@ -11,6 +13,7 @@
       }
     </style>
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}qanda/qanda.css" rel="stylesheet">
 </head>
 <body>
     
