--- a/qanda/qanda_app/templates/question_list.html
+++ b/qanda/qanda_app/templates/question_list.html
@@ -33,6 +33,20 @@
 		</div>
 	{% endfor %}
 
+		<div class="pull-left span2">
+			<h3>
+				Recent Tags
+			</h3>
+			<div class="tags-box">
+				{% for tag in tags %}
+				<a class="tag-link" href="{% url qanda_app.views.tag_page tag=tag page=0 %}">
+					{{ tag }}
+				</a>
+				<br/>
+				{% endfor %}
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		<p></p>
 	</div>
