--- a/qanda/qanda_app/templates/tag_page.html
+++ b/qanda/qanda_app/templates/tag_page.html
@@ -22,15 +22,33 @@
 				</div>	
 			</div>
 		{% endfor %}
+	<div class="row">
+		<p></p>
 	</div>
 
-	<div class="span6">
+	<div class="pagination pagination-large text-center">
+	  <ul>
 		{% if prev or prev == 0 %}
-		<a href="{% url qanda_app.views.tag_page tag=tag page=prev %}">Prev</a>
+	    	<li class=""><a href="{% url qanda_app.views.tag_page tag=tag page=prev %}">Prev</a></li>
+    	{% else %}
+	    	<li class="disabled"><a href="#">Prev</a></li>
 		{% endif %}
+			
+			<li class="disabled"><a href="#">_______________________</a></li>
+			
 		{% if next %}
-		<a href="{% url qanda_app.views.tag_page tag=tag page=next %}">Next</a>
+	    	<li class=""><a href="{% url qanda_app.views.tag_page tag=tag page=next %}">Next</a></li>
+	    {% else %}
+	    	<li class="disabled"><a href="#">Next</a></li>
 		{% endif %}
+	  </ul>
+	</div>
+
+	<div class="row">
+		<p></p>
+	</div>
+	<div class="row">
+		<p></p>
 	</div>
 
 	{% endblock %}
