display a span even if no tag exists

--- a/qanda/qanda_app/templates/question_listing_base.html
+++ b/qanda/qanda_app/templates/question_listing_base.html
@@ -22,6 +22,11 @@
 								#{{ tag }}
 							</span>
 						{% endfor %}
+						{% if not question.tags.all.exists %}
+							<span class="questiontag">						
+								#
+							</span>
+						{% endif %}
 						<span class="questioninfo pull-right">
 							{{ question.postDate }} by {{ question.author }} 
 						</span>
