display tag count in tags listing

--- a/qanda/qanda_app/templates/tag_list.html
+++ b/qanda/qanda_app/templates/tag_list.html
@@ -8,11 +8,13 @@
 
 	{% block tag_list %}
 
+	{{ debug }}
+
 	{% for tag in tags %}
 		<div class="row">
 			<div class="span6">
 				<a href="{% url qanda_app.views.tag_page tag=tag page="0" %}">
-					{{ tag }}
+					{{ tag }}  - x{{ tag.count }}
 				</a>
 			</div>	
 		</div>
