--- a/qanda/qanda_app/templates/tag_list.html
+++ b/qanda/qanda_app/templates/tag_list.html
@@ -9,30 +9,47 @@
 	{% block tag_list %}
 
 	{{ debug }}
-
-	{% for tag in tags %}
-		<div class="row">
-			<div class="span6">
-				<a href="{% url qanda_app.views.tag_page tag=tag page="0" %}">
-					{{ tag }}  - x{{ tag.count }}
-				</a>
-			</div>	
+	<h3>
+		Tags
+	</h3>
+	<h5>
+		in alphabetical order
+	</h5>
+	<div class="row">
+		<div class="span9">
+			{% for tag in tags %}
+						<div class="span2">
+							<a class="tag-list-element" href="{% url qanda_app.views.tag_page tag=tag page="0" %}">
+								#{{ tag }}
+							</a>
+							<span class="tag-list-used">
+							  - used {{ tag.count }} {% if tag.count == 1 %} time {% else %} times {% endif %}
+							</span>
+						</div>	
+			{% endfor %}
 		</div>
-	{% endfor %}
+	</div>
 
 	<div class="row">
 		<p></p>
 	</div>
 
-	<div class="row">
-		<div class="span6">
-			{% if prev or prev == 0 %}
-			<a href="{% url qanda_app.views.tag_list page=prev %}">Prev</a>
-			{% endif %}
-			{% if next %}
-			<a href="{% url qanda_app.views.tag_list page=next %}">Next</a>
-			{% endif %}
-		</div>
+	<div class="pagination pagination-large text-center">
+	  <ul>
+		{% if prev or prev == 0 %}
+	    	<li class=""><a href="{% url qanda_app.views.tag_list page=prev %}">Prev</a></li>
+    	{% else %}
+	    	<li class="disabled"><a href="#">Prev</a></li>
+		{% endif %}
+			
+			<li class="disabled"><a href="#">_______________________</a></li>
+
+		{% if next %}
+	    	<li class=""><a href="{% url qanda_app.views.tag_list page=next %}">Next</a></li>
+	    {% else %}
+	    	<li class="disabled"><a href="#">Next</a></li>
+		{% endif %}
+	  </ul>
 	</div>
 
 	{% endblock %}
